# TravelCompanion

./: main.py  pyproject.toml  test.py
api/: auth.py
db/: crud.py  database.py  models.py  travel.db
services/: __init__.py  yandex_parser.py
templates/: admin.html  index.html  login.html  register.html
tests/: __init__.py  conftest.py  test_api.py  test_recommendations.py  test_yandex_parser.py
