[project]
name = "travelcompanion"
version = "0.1.0"
description = ""
authors = [
    {name = "kentafar1k",email = "cherald1337@yandex.ru"}
]
#readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "pydantic (>=2.11.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
